@@ -1,0 +1,10 @@
+bin_PROGRAMS = 
+
+if CERN_ROOT
+bin_PROGRAMS += rts2-fit-focus
+
+rts2_fit_focus_SOURCES = rts2_fit_focus.C
+rts2_fit_focus_LDFLAGS = @LIB_ROOT@
+rts2_fit_focus_CXXFLAGS = @ROOT_CXXFLAGS@
+
+endif
